# build-my-x

./: .gitignore  CMakeLists.txt  README.md  install_llvm.bat  setup_build.bat  uninstall.bat
compiler/: README.md  run_test.bat  runtime.c
compiler/include/: ast.h  codegen.h  lexer.h
compiler/src/: codegen.cpp  main.cpp  parser.cpp
compiler/tests/: test1.tiny  test2.tiny  test3.tiny  test4.tiny
include/: parser.h
java-cli/: .gitignore  CHANGELOG.md  README.md  install_cli.bat  install_cli.sh  package.json  run_test.bat  run_test.sh  setup_build.bat  setup_build.sh  uninstall.bat  uninstall.sh
java-cli/lib/: build.js  project.js  sdk.js  utils.js
java-cli/templates/default/: .gitignore  README.md
java-cli/templates/default/src/: Main.java
java-cli/tests/: run_tests.js
src/: lexer.cpp
tests/: test5.tiny
